# laserbeamsize

./: .gitignore  .readthedocs.yaml  .yamllint  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  release.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh  test_all_notebooks.py
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml  test.yml  update_citation.yaml
doc/: 01-Definitions.ipynb  02-Test-Beam.ipynb  03-Easy-Images.ipynb  04-Harder-Images.ipynb  05-Razor-Blade.ipynb  06-Beam-Waist.ipynb  07-M2-Measurement.ipynb  09-ToDo.ipynb  t-168mm.pgm  t-210mm.pgm  t-414mm.pgm  t-480mm.pgm  t-495mm.pgm  t-510mm.pgm  t-580mm.pgm  t-666mm.pgm  t-770mm.pgm  t-hene.pgm  t-nolens.pgm
docs/: 01-Definitions.ipynb  01a-Background.ipynb  02-Test-Beam.ipynb  02a-Experiment.ipynb  02b-Fixed-Rotation.ipynb  03-Easy-Images.ipynb  04-Harder-Images.ipynb  04-Test-Beam.ipynb  05-Experiment.ipynb  05-Razor-Blade.ipynb  06-Beam-Waist.ipynb  06-Fixed-Rotation.ipynb  07-Easy-Images.ipynb  07-M2-Measurement.ipynb  07a-M2-Parameters.ipynb  07b-M2-Theory.ipynb  07c-M2-Experiment.ipynb  07c-M2-Fitting.ipynb  07c-M2-Measurement.ipynb  07d-M2-Examples.ipynb  07e-M2-Problems.ipynb  08-Harder-Images.ipynb  09-Razor-Blade.ipynb  09-ToDo.ipynb  10-Beam-Waist.ipynb  11-M2-Parameters.ipynb  12-M2-Theory.ipynb  13-M2-Experiment.ipynb  14-M2-Examples.ipynb  15-M2-Problems.ipynb  16-Beam-Size-Tutorial.ipynb  FBWR_151.pgm  TEM00_140mm.pgm  TEM00_150mm.pgm  TEM00_200mm.pgm  TEM00_300mm.pgm  TEM01_100mm.pgm  TEM01_200mm.pgm  TEM01_300mm.pgm  TEM02_100mm.pgm  (+27 more)
laserbeamsize/: __init__.py  analysis.py  background.py  display.py  gaussian.py  image_tools.py  laserbeamsize.py  m2.py  m2_display.py  m2_fit.py  masks.py
tests/: all_test_notebooks.py  human_test_for_phi_fixed.py  test_all_notebooks.py  test_analysis.py  test_back.py  test_basic_beam_size.py  test_beam_size.py  test_beam_size_no_noise.py  test_beam_size_noise.py  test_fixed_phi.py  test_gaussian.py  test_iso_noise.py  test_laserbeamsize.py  test_masks.py  test_no_noise.py  test_noise.py  test_tools.py
