[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
exclude =['.git', '__pycache__', 'docs']

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D212", "F403"]
pydocstyle.convention = "google"

# Skip the "Missing docstring in public function" rule in every test file
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements.txt",
    "todo",
]

[tool.pytest.ini_options]
markers = ["notebooks"]

[tool.pylint]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-locals",
    "too-many-arguments",
    "consider-using-f-string",
    "too-many-statements",
  ]

