[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laserbeamsize"
description = "ISO 11146 Calculation of Laser Beam Center, Diameter, and M²"
readme = "README.rst"
requires-python = ">=3.9"
keywords = [
    "variance",
    "gaussian",
    "M-squared",
    "d4sigma",
    "M2",
    "M²",
    "spotsize",
    "laser beam",
    "ISO11146",
    "divergence",
    "beam waist",
    "TEM00",
    "beam diameter",
    "beam parameter product",
    "BPP",
    "laser propagation",
    "beam profiling",
    "beam optics",
    "beam measurement",
    "laser metrology",
    "beam quality",
    "beam analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]
authors = [{name = "Scott Prahl", email = "scott.prahl@oit.edu"}]
license = "MIT"
urls = {Homepage = "https://github.com/scottprahl/laserbeamsize"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "laserbeamsize.__version__"}

[tool.setuptools]
packages = ["laserbeamsize"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D212", "F403"]
pydocstyle.convention = "google"

# Skip the "Missing docstring in public function" rule in every test file
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements.txt",
    "todo",
]

[tool.pytest.ini_options]
markers = ["notebooks"]

[tool.pylint]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-locals",
    "too-many-arguments",
    "consider-using-f-string",
    "too-many-statements",
  ]

[tool.black]
line-length = 110
