[bdist_wheel]
universal=1

[metadata]
name = laserbeamsize
version = 1.7.2
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = ISO 11146 Calculation of Laser Beam Center, Diameter, and M²
url = https://github.com/scottprahl/laserbeamsize.git

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

keywords = 
    variance
    gaussian
    M-squared
    d4sigma
    M2
    M²
    spotsize
    laser beam
    IS011146
    divergence
    beam waist
    TEM00
    beam diameter

[options]
packages = laserbeamsize
install_requires = 
    numpy
    matplotlib
    scipy
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
