[metadata]
description = ISO 11146 Calculation of Laser Beam Center, Diameter, and M²

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

keywords = 
    variance
    gaussian
    M-squared
    d4sigma
    M2
    M²
    spotsize
    laser beam
    IS011146
    divergence
    beam waist
    TEM00
    beam diameter
    beam parameter product
    BPP

[options]
packages = laserbeamsize
install_requires = 
    numpy
    matplotlib
    scipy
    imageio

python_requires = >=3.5
zip_safe = True

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore = W503, D212, D405, D411, N802, N803, N806
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
exclude =
    .git,
    .eggs,
    __pycache__,
    docs
max-line-length = 120
docstring-convention = google
